fixed: overflow issue

--- a/src/pages/sign-in/styles.scss
+++ b/src/pages/sign-in/styles.scss
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .sign-in__content-wrapper {
