--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@ html,
 body,
 #app {
   height: 100%;
+  overflow: auto;
 }
 
 .center-h {
